examples/test/testpolicy7175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7175
  namespace: namespace444
spec:
  podSelector:
    matchLabels:
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value7
          key36: value15
          key43: value30
      podSelector:
        matchLabels:
          key49: value4
          key30: value9
